# fixed_solvers

./: .clangd  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CMakePresets.json  Config.cmake.in  Install.md  README.md
.github/workflows/: lint.yaml
documents/: feat-function-domain.md  feat-linesearch-noise-floor.md  linesearch-noise-floor-research-paper.md
fixed/: array_ext.h  fixed.h  fixed_bisection.h  fixed_constraints.h  fixed_linear_solver.h  fixed_nonlinear_solver.h  fixed_optimizer.h  fixed_system.h
fixed/helpers/: cubic_equation_functions.h  math_helpers.h  ranged_functions.h  string_helpers.h
fixed/line_search/: divider.h  golden_section.h  golden_section_domain_discovery.h
fixed/qp/: qp_wrapper.h
msvc/: testing_fixed_solvers.sln  testing_fixed_solvers.vcxproj  testing_fixed_solvers.vcxproj.filters
msvc_cmake/: readme.txt
pipeline/pipeline_scripts/: Clang_test.sh  build.sh  clangbuild.ps1  doxygen_test.sh  gccbuild.sh  mingwbuild.ps1  tests_start.sh
testing/: bisection.cpp  newton_solver.cpp  optimizer.cpp  test_cubic_functions.cpp  test_cubic_functions.h  test_golden_section_domain_based.h  test_golden_section_domain_discovery.h  test_golden_section_target_value.h  test_helpers.h  test_linear_constraints.h  test_linear_system.h  test_main.cpp  test_newton_domain_violation.h  test_newton_raphson.h
testing/qp/: eiquadprog.hpp
